--- a/MyWinshark/MyWinshark.ui
+++ b/MyWinshark/MyWinshark.ui
@@ -135,6 +135,9 @@
        <height>200</height>
       </size>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
      <property name="styleSheet">
       <string notr="true">QHeaderView::section{ 
     padding:3px; margin:0px; color:#DCDCDC;  border:1px solid #242424; 
@@ -174,10 +177,16 @@
    <item>
     <widget class="QTreeWidget" name="treeWidget">
      <property name="columnCount">
-      <number>4</number>
+      <number>5</number>
      </property>
      <attribute name="headerVisible">
       <bool>false</bool>
+     </attribute>
+     <attribute name="headerCascadingSectionResizes">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="headerDefaultSectionSize">
+      <number>200</number>
      </attribute>
      <column>
       <property name="text">
@@ -197,6 +206,11 @@
      <column>
       <property name="text">
        <string notr="true">4</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string notr="true">5</string>
       </property>
      </column>
     </widget>
