--- a/MyWinshark/MyWinshark.ui
+++ b/MyWinshark/MyWinshark.ui
@@ -49,7 +49,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>30</width>
+          <width>100</width>
           <height>30</height>
          </size>
         </property>
@@ -60,7 +60,7 @@
          </size>
         </property>
         <property name="text">
-         <string>开始</string>
+         <string>选择网卡</string>
         </property>
        </widget>
       </item>
